--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=ecommerc;User Id=SA;Password=Password@1;TrustServerCertificate=True"
+    "DefaultConnection": "Server=localhost,1433;Database=ecommerc;User Id=SA;Password=Password@1;TrustServerCertificate=True",
+    "Redis" : "localhost"
   }
 
 }
