--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
+    "@stripe/stripe-js": "^5.6.0",
     "nanoid": "^5.0.9",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
