--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,6 +7,7 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,1433;Database=ecommerc;User Id=SA;Password=Password@1;TrustServerCertificate=True",
-    "Redis" : "localhost"
+    "Redis" : "true-cow-44569.upstash.io:6379,password=Aa4ZAAIjcDFjNGZlNzlkYzAxNDE0Nzg5OGFiMDUyNTE0YzUyZDRmNHAxMA,ssl=true,abortConnection=False"
   }
 }
+
