--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -1,8 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <ItemGroup>
-    <ProjectReference Include="..\Core\Core.csproj" />
-  </ItemGroup>
+<ItemGroup>
+  <None Include="Data\SeedData\**" CopyToOutputDirectory="PreserveNewest" />
+  <ProjectReference Include="..\Core\Core.csproj" />
+</ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.1" />
@@ -10,10 +11,6 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.1" />
     <PackageReference Include="StackExchange.Redis" Version="2.8.24" />
     <PackageReference Include="Stripe.net" Version="47.3.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Data\SeedData\" />
   </ItemGroup>
 
   <PropertyGroup>
