--- a/.github/workflows/main_ecommerce-test.yml
+++ b/.github/workflows/main_ecommerce-test.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP.Net Core app to Azure Web App - ecommerce-test
+name: Build and deploy ASP.Net Core app to Azure Web App - skinet-course
 
 on:
   push:
@@ -12,22 +12,37 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-    permissions:
-      contents: read #This is required for actions/checkout
+
+    env:
+      PROJECT_PATH: ./API
 
     steps:
       - uses: actions/checkout@v4
 
+      - name: Set up node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+
+      - name: Install Angular CLI
+        run: npm install -g @angular/cli@18
+
+      - name: Install deps and build angular app
+        run: |
+          cd client
+          npm install
+          ng build
+
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '9.x'
+          dotnet-version: '8.x'
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: dotnet build ${{env.PROJECT_PATH}} --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+        run: dotnet publish ${{env.PROJECT_PATH}} -c Release -o "${{env.DOTNET_ROOT}}/myapp"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -43,7 +58,6 @@ jobs:
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
       id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
 
     steps:
       - name: Download artifact from build job
@@ -54,15 +68,15 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_BCE25D2474E04910A2BA3419AC3E36F1 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_4B1E6881686249F4AFC521BEC2FC7098 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_4A984C5133B24B6EA221FD24AB28F454 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_989246943D0044F8B8817BEB6A916B09 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_C1B1A60CB0914793A0A171889FEAD13D }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_8F6B233C777A4785BD6142BC5044A2D5 }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'ecommerce-test'
+          app-name: 'skinet-course'
           slot-name: 'Production'
           package: .
           
