--- a/.github/workflows/main_ecommerce-test.yml
+++ b/.github/workflows/main_ecommerce-test.yml
@@ -68,9 +68,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_989246943D0044F8B8817BEB6A916B09 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_C1B1A60CB0914793A0A171889FEAD13D }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_8F6B233C777A4785BD6142BC5044A2D5 }}
+            client-id: ${{ secrets.AZURE_CLIENT_ID }}
+            tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+            subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
