--- a/.github/workflows/main_ecommerce-test.yml
+++ b/.github/workflows/main_ecommerce-test.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP.Net Core app to Azure Web App - skinet-course
+name: Build and deploy ASP.Net Core app to Azure Web App - ecommerce-test
 
 on:
   push:
@@ -75,7 +75,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'skinet-course'
+          app-name: 'ecommerce-test'
           slot-name: 'Production'
           package: .
           
