--- a/.github/workflows/main_ecommerce-test.yml
+++ b/.github/workflows/main_ecommerce-test.yml
@@ -71,3 +71,10 @@ jobs:
             client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_BCE25D2474E04910A2BA3419AC3E36F1 }}
             tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_4B1E6881686249F4AFC521BEC2FC7098 }}
             subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_4A984C5133B24B6EA221FD24AB28F454 }}
+
+      - name: Deploy to Azure Web App
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: 'ecommerce-test'
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          package: ${{env.DOTNET_ROOT}}/myapp
